Little bug fix, now the video controls stay visible and doesn't collide.

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   overflow: hidden;
 }
 
-@media only screen and (max-height: 380px) {
+@media only screen and (max-height: 640px) {
   #root {
     overflow-y: initial !important;
   }
